--- a/data.qmd
+++ b/data.qmd
@@ -1,30 +1,44 @@
 # Data
 
+### Technical description
 
 Identify one or more data sources (see II. D. above) that you propose to draw on for the project. For each, describe how the data are collected and by whom. Describe the format of the data, the frequency of updates, dimensions, and any other relevant information. Explain how you plan to import the data. Carefully document your sources with links to the precise data sources that you used. If that is not possible (for example if your data is not available online, then explain that clearly.)
 
-Note any issues / problems with the data, either known or that you discover. 
+Note any issues / problems with the data, either known or that you discover.
 
-#### discuss the sample size situation. and we have quite a few columns with uniform observagtions. Some of the category does not add up to be the same that is for example: some female sample + male sample != OVERALL gender. （nonbinary,对比gender的时候呢不考虑）some states have info across certain years. some does not. 
+#### discuss the sample size situation. and we have quite a few columns with uniform observagtions. Some of the category does not add up to be the same that is for example: some female sample + male sample != OVERALL gender. （nonbinary,对比gender的时候呢不考虑）some states have info across certain years. some does not.
 
+我找的Excel表里面其中一个work sheet有讲methodology：我直接paste过来了
 
-
-(suggested: 1 page)
-
-
-
-## Description
-
-
-Explain in detail how your data will enable you to answer your research questions from the introduction. 
+The YTS was developed to provide states with comprehensive data on both middle school and high school students regarding tobacco use, exposure to environmental tobacco smoke, smoking cessation, school curriculum, minors' ability to purchase or otherwise obtain tobacco products, knowledge and attitudes about tobacco, and familiarity with pro-tobacco and anti-tobacco media messages. The YTS uses a two-stage cluster sample design to produce representative samples of students in middle schools (grades 6--8) and high schools (grades 9--12). The first sampling frame includes separate lists for middle schools and high schools. Schools are selected with probability proportional to their enrollment size. At the second sampling stage, classes are randomly selected from the list of classes obtained from each participating school. All students in the selected classes are eligible to participate in the survey. To have representative data, the sample must be selected on the basis of the parameters outlined above, and a minimum overall response rate of at least 60% must be achieved. The overall response rate is calculated by multiplying the school response rate by the student response rate. CDC has required an overall response rate of at least 60% to weight school-based data since 1991. Respondents who refuse to answer a particular question are excluded from analysis of that question.
 
 (suggested: 1 page)
 
+### **Research plan**
 
+In this section, we will first provide a brief introduction to our dependent and independent variables. We will then discuss the target values of interest that our data enables us to explore, followed by an examination of patterns that can be explored using demographic independent variables.
 
+Our primary dependent variable is "Data_Value," representing the percentage of students who share the same smoking status among the entire student population with similar features. In other words, holding other features constant in an observation (Year, Location, education, and gender), "Data_Value" provides the percentage of students with the given smoking status, including type of tobacco, user status, and frequency response.
 
-## Missing value analysis
+Regarding independent variables, we have general demographic variables such as gender, education, states, and year of the survey. Additionally, we have variables related to smoking status, including the type of tobacco (smokeless cigarettes or not), user status (attempted/thought about quitting or not), and frequency response (how frequently one smokes).
 
+For tobacco usage, we are interested in students' exposure to tobacco products and their frequency of usage. To explore middle school and high school students' exposure to tobacco and smokeless tobacco, respectively, we will focus on the subset of observations where the Response variable is equal to "Ever." According to the survey design, students who answered "Ever" reported having tried smoking cigarettes or smokeless cigarettes. We will also control for the TopicDesc variable to be either "Cigarette Use (Youth)" or "Smokeless Tobacco Use (Youth)" to examine student exposure to tobacco and smokeless tobacco separately. The corresponding values in the "Data_Value" variable can then be interpreted as the percentage of students who reported ever trying smoking cigarettes or smokeless cigarettes.
+
+On the other hand, controlling for other variables, we can also explore the frequency of smoking among the youth population. Instead of focusing on those who answered "Ever" to the Response variable, we will concentrate on those who reported "Current" and "Frequent." The corresponding values in the "Data_Value" variable for those who answered "Current" represent the percentage of students who had smoked on one or more days in the 30 days prior to the survey. Those who answered "Frequent" reported having smoked on 20 or more of the 30 days preceding the survey. We can again use the TopicDesc variable to examine cigarette usage and smokeless cigarette usage separately.
+
+Concerning tobacco cessation, we are also interested in understanding students' willingness to quit tobacco usage and their attempts. Although the dataset has a limited sample size, it provides relevant information. By controlling the TopicDesc variable to be "Cessation (Youth)" and the MeasureDesc variable to be "Quit Attempt in Past Year Among Every Day Cigarette Smokers," the observations in the "Data_Value" variable represent the percentage of current smokers who quit smoking for one day or more in the past year. Changing the MeasureDesc variable to "Percent of Current Smokers Who Want to Quit" allows the observation in the "Data_Value" variable to represent the percentage of current smokers who want to stop smoking cigarettes.
+
+While using smoking status-related dependent variables to explore tobacco usage prevalence among the youth population and their desire to quit smoking, we will employ demographic independent variables such as States, Gender, Level of education, and year of the survey to investigate potential disparities in patterns of tobacco usage and cessation in the youth population. Specifically, we can:
+
+1.  Investigate youth tobacco usage and cessation across states by changing the Location variable while controlling for other variables.
+
+2.  For each given state and year of the survey, investigate potential differences in youth tobacco usage and cessation between genders using the Gender variable.
+
+3.  Similarly, investigate the difference between the prevalence of tobacco usage and cessation in middle school and high school using the Education variable.
+
+4.  Vary the Year variable to observe the evolution of youth tobacco usage and cessation from 1999 to 2017 in chosen states or across all states. Additionally, we can explore how the difference in gender patterns of tobacco usage and cessation changes across years.
+
+### Missing Value Analysis
 
 Describe any patterns you discover in missing values. If no values are missing, graphs should still be included showing that.
 
