--- a/data.qmd
+++ b/data.qmd
@@ -2,17 +2,14 @@
 
 ### Technical description
 
-Identify one or more data sources (see II. D. above) that you propose to draw on for the project. For each, describe how the data are collected and by whom. Describe the format of the data, the frequency of updates, dimensions, and any other relevant information. Explain how you plan to import the data. Carefully document your sources with links to the precise data sources that you used. If that is not possible (for example if your data is not available online, then explain that clearly.)
+The only dataset used for this project is the Youth Tobacco Survey (YTS) Data, provided by the Office on Smoking and Health within the National Center for Chronic Disease Prevention and Health Promotion at the Centers for Disease Control and Prevention (CDC). The dataset can be directly accessed online at https://data.cdc.gov/Survey-Data/Youth-Tobacco-Survey-YTS-Data/4juz-x2tp.
 
-Note any issues / problems with the data, either known or that you discover.
+The YTS Data is derived from the web-based National Youth Tobacco Survey (NYTS), administered annually by CDC. The survey covers various aspects, including tobacco use, exposure to environmental tobacco smoke, smoking cessation, school curriculum, minors' access to tobacco products, knowledge and attitudes about tobacco, and exposure to pro-tobacco and anti-tobacco media messages. A two-stage cluster sample design was employed to produce representative samples of students in middle schools (grades 6–8) and high schools (grades 9–12). The first stage involves selecting schools with probability proportional to their enrollment size, while the second stage randomly selects classes from the selected schools. All students in the chosen classes are eligible to participate in the survey, and a minimum overall response rate of 60% is required. NYTS has been conducted since 1999, and the YTS Data synthesizes the results from 1999 to 2017. 
 
-#### discuss the sample size situation. and we have quite a few columns with uniform observagtions. Some of the category does not add up to be the same that is for example: some female sample + male sample != OVERALL gender. （nonbinary,对比gender的时候呢不考虑）some states have info across certain years. some does not.
+YTS dataset is provided in a tabular format in CSV or Excel format and can be directly imported into R. The dataset was published on June 3, 2014, with the latest update on June 7, 2018. The metadata was last updated on August 25, 2023. It contains 10600 observations with 31 variables. We primarily focus on variables representing state, year, gender, education level, smoking status, type of tobacco used, and cessation efforts.
 
-我找的Excel表里面其中一个work sheet有讲methodology：我直接paste过来了
+We also identified some potential issues with the data. First, there are some columns (TopicId, MeasuredId, StratificationID...) generated from the sampling process, which are irrelevant to the tobacco usage and cessation. Thus, these columns will be excluded in the analysis. Secondly, the dataset both gives the sample size of the youth who share the same smoking status under a given condition and the percentage of it among the total population. Considering the substantial variability in sample sizes based on different populations in schools and states, our emphasis will be on percentage values rather than sample size. Thirdly, in the gender column, the responses are female, male, and overall. Sample size of female and male do not exactly add up to the overall sample size, as other gender types are included. However,only binary genders (female and male) will be considered for comparisons, given the small sample sizes for non-binary genders. Additionally, due to missing data for certain states in specific years, temporal analysis may need to be conducted state-wise
 
-The YTS was developed to provide states with comprehensive data on both middle school and high school students regarding tobacco use, exposure to environmental tobacco smoke, smoking cessation, school curriculum, minors' ability to purchase or otherwise obtain tobacco products, knowledge and attitudes about tobacco, and familiarity with pro-tobacco and anti-tobacco media messages. The YTS uses a two-stage cluster sample design to produce representative samples of students in middle schools (grades 6--8) and high schools (grades 9--12). The first sampling frame includes separate lists for middle schools and high schools. Schools are selected with probability proportional to their enrollment size. At the second sampling stage, classes are randomly selected from the list of classes obtained from each participating school. All students in the selected classes are eligible to participate in the survey. To have representative data, the sample must be selected on the basis of the parameters outlined above, and a minimum overall response rate of at least 60% must be achieved. The overall response rate is calculated by multiplying the school response rate by the student response rate. CDC has required an overall response rate of at least 60% to weight school-based data since 1991. Respondents who refuse to answer a particular question are excluded from analysis of that question.
-
-(suggested: 1 page)
 
 ### **Research plan**
 
@@ -43,7 +40,8 @@ While using smoking status-related dependent variables to explore tobacco usage 
 ```{r}
 # import dataset
 library(readr)
-data <- read_csv("/Users/ailu/Dropbox/Mac/Desktop/Youth_Tobacco_Survey__YTS__Data.csv",show_col_types = FALSE)
+#data <- read_csv("/Users/ailu/Dropbox/Mac/Desktop/Youth_Tobacco_Survey__YTS__Data.csv",show_col_types = FALSE)
+data <- read_csv("C:/Users/iamzy/OneDrive/桌面/Youth_Tobacco_Survey__YTS__Data.csv",show_col_types = FALSE)
 ```
 
 We will remove variables with single unique observations and variables that are repetitive in nature.
