--- a/results.qmd
+++ b/results.qmd
@@ -162,10 +162,7 @@ plot2 <- ggplot(exposure_g_high, aes(x = value, y = fct_reorder2(region, Gender=
        x = "Percentage",
        y = "State") +
   theme_minimal()
-plot_grid(plot1, plot2, ncol = 1, align = "vh") +
-  plot_layout(guides = "collect") +
-  plot_annotation(title = "Cleveland Dot Plots for Cigarette Exposure",
-                  theme = theme(plot.title = element_text(hjust = 0.5)))
+plot_grid(plot1, plot2, ncol = 1, align = "vh")
 ```
 
 ```{r}
