--- a/d3graph.qmd
+++ b/d3graph.qmd
@@ -9,5 +9,9 @@
 <div id="plot">
 </div>
 
+<p id="instructions">Try the buttons below to see the difference by education level!</p>
+<button onclick="middleSch()">Middle School</button>
+<button onclick="highSch()">High School</button>
+
 <script src="https://cdn.jsdelivr.net/npm/d3@7"></script>
 <script src="scripts/myscript.js"></script>
