--- a/index.qmd
+++ b/index.qmd
@@ -2,6 +2,6 @@
 
 While cigarette smoking stands as the leading cause of preventable disease, disability, and death in the United States, the issue of youth tobacco usage is of critical importance due to its profound role in fostering lifelong addiction. Early initiation escalates the risk of persisting tobacco habits into adulthood, particularly as adolescents exhibit heightened susceptibility to the addictive properties of nicotine. Consequently, understanding and addressing youth tobacco usage is crucial for not only enhancing the immediate well-being of young individuals but also shaping the future prevalence of smoking-related illnesses in the adult population.
 
-This exploratory data report navigates through the extensive data provided by the Centers for Disease Control and Prevention (CDC) Youth Tobacco Survey (YTS) Data, which offers insights into the pervasive issue of youth tobacco consumption. Our investigation centers on three primary inquiries. Firstly, we explore the incidence of tobacco (electronic cigarettes, cigarettes, cigars) and smokeless tobacco (non-combustible tobacco products such as chewing tobacco and snuff) usage among the youth population. Secondly, we scrutinize the frequency of smoking in youth. Thirdly, we investigate the presence of cessation efforts, encompassing both willingness and past attempts. Through systematic analysis of variables, including state, year, gender, and education level, our objective is to identify disparities in patterns of tobacco usage and cessation across these variables. For instance, we aim to discern whether youth tobacco usage and cessation exhibit geographical variations and how gender and education level relate to these patterns. Moreover, a temporal analysis enables us to identify evolving trends in tobacco usage.
+This exploratory data report navigates through the extensive data provided by the Centers for Disease Control and Prevention (CDC) Youth Tobacco Survey (YTS) Data, which offers insights into the pervasive issue of youth tobacco consumption. Our investigation centers on two primary inquiries. Firstly, we explore the incidence of tobacco (electronic cigarettes, cigarettes, cigars) usage among the youth population. Secondly, we scrutinize the frequency of smoking in youth. Through systematic analysis of variables, including state, year, gender, and education level, our objective is to identify disparities in patterns of tobacco exposure and addiction across these variables. For instance, we aim to discern whether youth tobacco exposure and addiction exhibit geographical variations and how gender and education level relate to these patterns. Moreover, a temporal analysis enables us to identify evolving trends in tobacco usage.
 
-In summary, this report aims to provide a comprehensive exploration of the CDC YTS dataset, intending to unravel trends and patterns in youth tobacco usage and cessation. By examining various dimensions—geographic location, demographics, and temporal trends—we aspire to contribute valuable insights to the ongoing public health efforts focused on mitigating the impact of youth tobacco consumption.
+In summary, this report aims to provide a comprehensive exploration of the CDC YTS dataset, intending to unravel trends and patterns in youth tobacco exposure and addiction. By examining various dimensions---geographic location, demographics, and temporal trends---we aspire to contribute valuable insights to the ongoing public health efforts focused on mitigating the impact of youth tobacco consumption.
